data/derived/sp14/progs/unify/prog3873.ml.out
Characters 23-31:
  log10 xs + 1;;
  ^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
